	    -- Made tar read 20 512byte blocks at a time (like GNU tar)
	    -- Allow msh.c assignments with the export and readonly commands.
	    -- Added BB_FEATURE_DEVFS to enable devfs device names.
	    -- Better devfs support
	    -- Don't save/restore vi readonly flag if vi is compiled read-only.
	    -- Reworked rdate option handling (is now smaller).
	    -- Size reduction in ping
	* Aaron Lehmann 
	    -- slimmed down md5sum 
	    -- contributed a nice new (hand written, not lex/yacc) Posix math 
		support for ash, which is once again a full posix shell.
	* Felix von Leitner <leitner@convergence.de> -- patches to make busybox 
	    work with dietlibc.
	* David McCullough
	    -- Adjustments to make busybox more uClinux friendly
	* Glenn McGrath 
	    -- Fixed gzip so when a filename is '-' it will use stdin/stdout
	    -- dpkg rewrite.  Should now be compatable with the real dpkg, 
		but needs more testing.
	    -- Updates to archiving tools (gunzip/gzip/cpio/ar/etc) 
	    -- Rewrote uuencode, will allow base64 encoding to be used by wget
	* Vladimir Oleynik 
	    -- Fixed tr to support 'tr a-z A-Z' syntax,
	    -- Many ash corrections, optimizations, and cleanups.
	    -- optimizations for traceroute, md5sum, chown, ping
	    -- cmdedit updates and API change
	    -- Namespace cleanup (i.e. adding 'static' private function calls)
	    -- added "stopped jobs" warning to ash on exit
	* Adam Slattery
	    -- Fixed ping compile problem


	 -Erik Andersen, 31 July 2001



0.52
	
    Critical Bugfixes:
	* Glenn McGrath -- Fixed gunzip, zcat when reading from stdin
	* Marc Karasek and Kanoj (kernel serial.c maintainer) -- fixed init
	    problem on serial consoles with 2.4.3+ kernels.
	
    New Applets:
	* Laurence Anderson -- rpm2cpio applet, this obsoletes rpmunpack 
	    which has now been removed from BusyBox 
	* Laurence Anderson and Glenn McGrath -- cpio applet, currently 
	    only supports unpacking the ascii cpio format.