@@ -41,6 +41,7 @@
 	    -- Don't save/restore vi readonly flag if vi is compiled read-only.
 	    -- Reworked rdate option handling (is now smaller).
 	    -- Size reduction in ping
+	    -- Always write dd counts to stderr
 	* Aaron Lehmann 
 	    -- slimmed down md5sum 
 	    -- contributed a nice new (hand written, not lex/yacc) Posix math 
